soft delete works for customer
