# core-banking-service/docs/swagger.yaml
@@ -127,4 +127,29 @@ paths:
       summary: Create a customer
       tags:
       - customers
+  /customers/{customerNumber}:
+    delete:
+      description: Delete Customer by customer number
+      parameters:
+      - description: Customer number
+        in: path
+        name: customerNumber
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: Delete Customer by customer number
+      tags:
+      - customers
 swagger: "2.0"
