# core-banking-service/internal/customer/handler.go
@@ -2,8 +2,10 @@ package customer
 
 import (
 	"encoding/json"
+	"log"
 	"net/http"
 	"strconv"
+	"strings"
 )
 
 type CreateCustomerRequest struct {
@@ -25,6 +27,7 @@ func NewCustomerHandler(service *CustomerService) *CustomerHandler {
 		service: service,
 	}
 }
+
 // CreateCustomer godoc
 // @Summary Create a customer
 // @Description Creates a new customer.
@@ -75,17 +78,17 @@ func (h *CustomerHandler) Create(w http.ResponseWriter, r *http.Request) {
 // @Param page query int false "Page number" default(1)
 // @Param limit query int false "Number of customers per page" default(20)
 func (h *CustomerHandler) List(w http.ResponseWriter, r *http.Request) {
-	page,err := strconv.Atoi(r.URL.Query().Get("page"))
+	page, err := strconv.Atoi(r.URL.Query().Get("page"))
 	if err != nil || page < 1 {
 		http.Error(w, "page must be a positive integer", http.StatusBadRequest)
 		return
 	}
-	limit,err := strconv.Atoi(r.URL.Query().Get("limit"))
+	limit, err := strconv.Atoi(r.URL.Query().Get("limit"))
 	if err != nil || limit < 1 || limit > 100 {
-	http.Error(w, "limit must be between 1 and 100", http.StatusBadRequest)
-	return
-}
-	customers, err := h.service.List(r.Context(),page,limit)
+		http.Error(w, "limit must be between 1 and 100", http.StatusBadRequest)
+		return
+	}
+	customers, err := h.service.List(r.Context(), page, limit)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
 		return
@@ -95,4 +98,31 @@ func (h *CustomerHandler) List(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 
 	_ = json.NewEncoder(w).Encode(customers)
+}
+
+// DeleteCustomer godoc
+//
+// @Summary Delete Customer by customer number
+// @Description Delete Customer by customer number
+// @Tags customers
+// @Produce json
+// @Param customerNumber path string true "Customer number"
+// @Success 204
+// @Failure 400 {string} string
+// @Failure 500 {string} string
+// @Router /customers/{customerNumber} [delete]
+func (h *CustomerHandler) Delete(w http.ResponseWriter, r *http.Request) {
+	customerNumber := r.PathValue("customerNumber")
+
+	if strings.TrimSpace(customerNumber) == "" {
+		http.Error(w, "Enter Valid customer number", http.StatusBadRequest)
+	}
+	err := h.service.Delete(r.Context(), customerNumber)
+	if err != nil {
+		log.Printf("delete customer failed: %v", err)
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusNoContent)
 }
